--- a/3-javaScript-desdeCero/1-clase-mutabilidad-inmutabilidad/Index.html
+++ b/3-javaScript-desdeCero/1-clase-mutabilidad-inmutabilidad/Index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="./1-clase/1-clase.js"></script>
+    <script src="/3-javaScript-desdeCero/1-clase-mutabilidad-inmutabilidad/app.js"></script>
 </body>
 
 </html>
